# rabbit-mq

./: log.text  pyproject.toml
common/schemas/: base.py
common/utils/: config.py
rpcs/: client.py  server.py
topics/: emitter.py  worker.py
