[tool.poetry]
name = "rabbit-mq-topics"
version = "0.1.0"
description = ""
authors = ["kaponda mulambia <44966170+kmulambia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
